// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink Block adds the bgDanger modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background-color: #FF4949;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the fullWidth modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverBgDanger modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c1:hover,
.c1:focus {
  background-color: #ff6262;
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverCustom modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: undefined;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverDanger modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #FF4949;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverInfo modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #1FB6FF;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverSuccess modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #13CE66;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverWarning modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #FFC82C;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block renders correctly 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block uses default styles if no hoverColor is provided with hoverCustom modifier 1`] = `
.c0 {
  background: transparent;
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #191919;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #191919;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;
